created filer read me etc

--- a/utkonos.html
+++ b/utkonos.html
@@ -24,6 +24,11 @@
             </div>
         </div>
     </header>
+ <div>
+     <span>Новый блок</span>
+     <img src="https://icdn.lenta.ru/images/2021/04/27/16/20210427163138131/square_320_c09ebae17387b7d6eeb9fa0d42afe5ee.jpg" alt="new">
+ </div>
+
     <div class="banner">
         <img src="https://gcdn.utkonos.ru/assets-ng/landings/b2b/title-739x480.png" alt="banner-img">
         <div class="banner-right">
